fix osg task
