# api/models/project.go
@@ -1,7 +1,7 @@
 package models
 
 type ProjectReq struct {
-	DeveloperId  string `json:"developer_id"`
+	AdminId      string `json:"admin_id"`
 	ProjectName  string `json:"project_name"`
 	StartedDate  string `json:"started_date" example:"2006/01/02"`
 	FinishedDate string `json:"finished_date" example:"2006/01/02"`
@@ -10,7 +10,7 @@ type ProjectReq struct {
 
 type ProjectRes struct {
 	Id           int    `json:"id"`
-	DeveloperId  string `json:"developer_id"`
+	AdminId      string `json:"admin_id"`
 	ProjectName  string `json:"project_name"`
 	StartedDate  string `json:"started_date" example:"2006/01/02"`
 	FinishedDate string `json:"finished_date" example:"2006/01/02"`
